# canary-mlx

./: .gitignore  README.md  pyproject.toml
canary_mlx/: __init__.py  alignment.py  audio.py  canary.py  cli.py  conformer.py  convert_nemo.py  tokenizer.py  transformer.py  utils.py  weight_diff.py
tools/: compare_encoder_layers.py
